Maps, render and settings

--- a/Test bench/Tesla_UI/build-TeslaUI-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile.Debug
+++ b/Test bench/Tesla_UI/build-TeslaUI-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile.Debug
@@ -102,6 +102,8 @@ debug/qrc_qml.cpp: ../TeslaUI/qml.qrc \
 		../TeslaUI/main.qml \
 		../TeslaUI/ui/LeftScreen/LeftScreen.qml \
 		../TeslaUI/ui/BottomBar/BottomBar.qml \
+		../TeslaUI/ui/assets/carRender.png \
+		../TeslaUI/ui/assets/carSettingsIcon.png \
 		../TeslaUI/ui/RightScreen/RightScreen.qml
 	C:\Qt\5.15.2\mingw81_64\bin\rcc.exe -name qml ..\TeslaUI\qml.qrc -o debug\qrc_qml.cpp
 
